[package]
name = "quoted_printable"
version = "0.4.1"
authors = ["Kartikaya Gupta <kats@seldon.staktrace.com>"]
edition = "2018"
description = "A simple encoder/decoder for quoted-printable data"
homepage = "https://github.com/staktrace/quoted-printable/blob/master/README.md"
repository = "https://github.com/staktrace/quoted-printable"
readme = "README.md"
keywords = ["decode", "encode", "quoted", "printable"]
categories = ["email", "parsing"]
license = "0BSD"

[badges]
travis-ci = { repository = "staktrace/quoted-printable", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
